--- a/exercises/01.js-hello-world/01.problem.hello/index.html
+++ b/exercises/01.js-hello-world/01.problem.hello/index.html
@@ -26,3 +26,22 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--	 💰 root.append(div) -->
 <!--	 📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Practice some basics</title>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
+	<script type="module">
+		const root = document.getElementById('root')
+		const div = document.createElement('div')
+		div.className = 'container'
+		div.textContent = 'Hello World'
+		root.append(div)
+	</script>
+</html>
