--- a/exercises/04.components/02.problem.raw/index.html
+++ b/exercises/04.components/02.problem.raw/index.html
@@ -15,9 +15,8 @@
 
 			const element = (
 				<div className="container">
-					{/* 🐨 change these function calls to React.createElement API calls */}
-					{message({ children: 'Hello World' })}
-					{message({ children: 'Goodbye World' })}
+					{React.createElement(message, null, 'Hello World')}
+					{React.createElement(message, { children: 'Goodbye World' })}
 				</div>
 			)
 
